export interface Topic {
  id: number;
  name: string;
  description: string;
  created_at: Date;
  isSubscribed?: boolean;
}
